--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 }
 
 .superinfo {
+  font-weight: 700;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -24,4 +25,45 @@ body {
 .superinfo p,
 .superinfo a {
   margin: 0 10px 10px 10px;
+}
+
+.menu-bg {
+  background: #2c70ff;
+}
+
+.menu {
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 15px 0;
+  max-width: 960px;
+}
+
+.menu a {
+  color: white;
+}
+
+.menu-logo a {
+  font-size: 2.25rem;
+  font-weight: 700;
+  margin: 0 10px;
+}
+
+.menu-nav ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-nav a {
+  font-size: 1.25rem;
+  display: block;
+  padding: 10px;
+}
+
+.menu-nav a:hover {
+  background: #122ab2;
+  border-radius: 6px;
 }
