--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,6 @@ body {
   background: #2c70ff;
   border-radius: 50%;
 }
-
 .preco-item a {
   max-width: 300px;
   display: block;
@@ -223,8 +222,47 @@ body {
 }
 
 .qualidade {
+  display: flex;
+  flex-wrap: wrap;
   max-width: 960px;
   margin: 60px auto;
+}
+
+.qualidade-item {
+  flex: 1 1 300px;
+  margin: 20px 10px;
+}
+
+.qualidade-item h2 {
+  font-size: 2.25rem;
+  color: #a4a4a4;
+  margin-bottom: 20px;
+}
+
+.qualidade-item h2::before {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 25px;
+  margin-right: 10px;
+}
+
+.qualidade-item:nth-of-type(3n + 1) h2::before {
+  background: #7c5ad1;
+}
+
+.qualidade-item:nth-of-type(3n + 2) h2::before {
+  background: #f9265e;
+}
+
+.qualidade-item:nth-of-type(3n + 3) h2::before {
+  background: #66d9eb;
+}
+
+.qualidade-item p {
+  font-size: 1.25rem;
+  line-height: 1.4;
+  color: #7c7c7c;
 }
 
 @media (max-width: 800px) {
