--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,81 @@ body {
   color: #7c7c7c;
 }
 
+.newsletter {
+  background: #f7f7f7;
+  padding: 60px calc((100% - 960px) / 2);
+  color: #7c7c7c;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-info {
+  flex: 1 1 240px;
+  margin: 0 10px;
+}
+
+.newsletter-info h1 {
+  font-size: 3rem;
+  color: #a4a4a4;
+}
+
+.newsletter-info p {
+  font-size: 1.25rem;
+  font-style: italic;
+  max-width: 230px;
+  color: #7c7c7c;
+  margin-bottom: 10px;
+}
+
+.newsletter-form {
+  flex: 2 1 260px;
+  margin: 0 10px;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input {
+  flex: 3 1 200px;
+  font-size: 1.25rem;
+  color: #7c7c7c;
+  font-style: italic;
+  font-family: "Popins", sans-serif;
+  border: 4px solid #2c70ff;
+  background: transparent;
+  padding: 10px;
+  margin: 0px;
+  border-radius: 0px;
+}
+
+.newsletter-form button {
+  flex: 1 1 200px;
+  font-family: "Popins", sans-serif;
+  font-size: 2.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
+  margin: 0px;
+  cursor: pointer;
+  background: #2c70ff;
+  border: 0px;
+  padding: 15px 10px;
+}
+
+footer {
+  display: flex;
+  background: #2c70ff;
+  height: 200px;
+  align-items: center;
+}
+
+footer p {
+  flex: 1;
+  text-align: center;
+  font-size: 2rem;
+  color: #122ab2;
+}
+
 @media (max-width: 800px) {
   .preco {
     padding-left: 10px;
@@ -277,5 +352,9 @@ body {
 
   .preco .preco-item:nth-child(2) {
     order: -1;
+  }
+
+  .newsletter-form button {
+    font-size: 1.25rem;
   }
 }
